# infrastructure-agent

./: --> [Data Processing Module] --> [Storage Backend]  .benchmark_history.json  .clinerules  .gitignore  ARCHITECTURE.md  BACKLOG.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  SECURITY.md  api_server.py  check_local.sh  docker-compose.ci.yml  docker-compose.yml  dump_assessment.py  openapi.json  pyproject.toml  report.json  report_acceptance.json  report_v2.json  review.patch  run_acceptance.py  run_tests.py  run_tests_v2.py  servers.json  system_info.py  targets.json  tools.json
.github/workflows/: ci.yml
.workflow/: README.md  generate_backlog.py  progress_report.md  state.json  supervisor.sh
.workflow/commands/: benchmark.sh  lint.sh  run-tests.sh  typecheck.sh
benchmark/: __main__.py  assessment_evaluator.py  dataset.py  metadata.py  registry.py  report.py  runner.py  scoring.py
config/: secrets.local.example.json
desktop/: main.js  package-lock.json  package.json
docker/: Dockerfile.api  Dockerfile.ui  generate-certs.sh  nginx-reverse-proxy.conf  nginx.conf
docs/: DOCUMENTATION_ARCHITECTURE.md  agent_core.md  capability_architecture.md  coding_standards.md  discovery_architecture.md  executor.md  knowledge_model.md  plan_architecture.md  planner.md  project_principles.md  runtime_architecture.md  shared_architecture.md  tool_architecture.md  troubleshooting.md  verification_architecture.md
docs/AI/: 00_BOOTSTRAP.txt  01_Architecture.txt  02_Development_Rules.txt  03_PROJECT_STATE.txt  04_ARCHITECTURE_DECISIONS.txt
docs/adr/: ADR-0001-agent-responsibility-boundary.md  ADR-0002-action-observation-loop.md  ADR-0002-llm-assessment-only.md  ADR-0003-knowledge-tool-single-entry-point.md  ADR-0003-model-driven-information-acquisition.md  ADR-0004-stateless-state-management.md
docs/ai/: 00_BOOTSTRAP.md  01_AGENT_PHILOSOPHY.md  01_VISION.md  02_ARCHITECTURE.md  02_CURRENT_ARCHITECTURE.md  03_EXECUTION_PIPELINE.md  03_PLATFORM_ARCHITECTURE.md  04_DEVELOPMENT_RULES.md  04_ROADMAP.md  05_EXECUTION_PIPELINE.md  05_INTENT_LIBRARY.md  06_EVIDENCE_TEMPLATES.md  06_TOOL_AND_CAPABILITY_DESIGN.md  07_CAPABILITY_GRAPH.md  07_DEVELOPMENT_RULES.md  08_PROJECT_STATE.md  08_TOOL_DESIGN.md  09_ARCHITECTURE_DECISIONS.md  09_BENCHMARK_STRATEGY.md  10_AGENT_RUNTIME.md  11_PROJECT_STATE.md  12_ARCHITECTURE_DECISIONS.md
docs/api/: README.md
docs/architecture/: diagrams.md
docs/component_specifications/: execution_constraints_model_specification.md  execution_context_model_specification.md  execution_result_model_specification.md  execution_session_model_specification.md  execution_state_model_specification.md  lifecycle_transition_model_specification.md  runtime_metadata_model_specification.md
docs/devops/: ci.md  docker.md
docs/discovery_behavior/: discovery_engine_behavior.md
docs/engineering/: assessment_architecture.md  assessment_benchmark.md  assessment_benchmark_current_state.md  assessment_benchmark_dataset.md  assessment_configuration.md  assessment_current_state.md  assessment_evaluation_architecture.md  legacy_inventory.md  (+11 more)
orion.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
orion_cli/: __init__.py
osquery-discovery/: build_knowledge_store.py  collect_osquery.py  knowledge_store.json  knowledge_tool.py  result.json  tables.txt  update_knowledge.py
scripts/: prompt_benchmark.py
src/: cli.py
tests/: test_cli.py  test_smoke_containers.py
ui/: package-lock.json  package.json  vite.config.ts  vitest.config.ts
(+326 files in other folders)
