[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orion"
version = "0.1.0"
description = "Orion — Infrastructure investigation platform with AI-powered assessment."
authors = [{name = "Orion"}]
dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "pydantic>=2.0",
    "psycopg2-binary>=2.9",
]

[project.scripts]
orion = "src.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[project.optional-dependencies]
test = ["pytest>=7", "pytest-cov>=5"]
web = ["fastapi>=0.100", "uvicorn>=0.20"]

[tool.coverage.run]
source = ["src"]
omit = ["src/tool/RAGTool/*", "tests/*"]
relative_files = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "raise AssertionError",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]
ignore = [
    "E501",
    "E402",
    "E701",
]
