[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orion"
version = "0.1.0"
description = "Orion — Infrastructure investigation platform with AI-powered assessment."
authors = [{name = "Orion"}]
dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "pydantic>=2.0",
    "psycopg2-binary>=2.9",
    "starlette>=0.35",
]

[project.scripts]
orion = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.optional-dependencies]
test = ["pytest>=7", "pytest-cov>=5", "httpx2>=2.0"]
web = ["fastapi>=0.100", "uvicorn>=0.20"]
security = ["bandit>=1.7", "safety>=3.0", "pip-audit>=2.7"]
dev = ["mypy>=1.8"]
typecheck = ["mypy>=1.8"]

[tool.coverage.run]
source = ["src"]
omit = ["src/tool/RAGTool/*", "tests/*"]
relative_files = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "raise AssertionError",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]
ignore = [
    "E501",
    "E402",
    "E701",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv", ".git", "ui", "desktop", "benchmark"]
skips = ["B101", "B301", "B303", "B403", "B601", "B602"]
# B101: assert used (acceptable in tests, excluded via dirs)
# B301: pickle (known usage, excluded via dirs)
# B303: md5 (known usage, excluded via dirs)
# B403: pickle import (known usage, excluded via dirs)
# B601: paramiko (SSH lib, intentional)
# B602: subprocess_with_shell_equals_true (SSH execution, intentional)
